# fast-and-furious-with-graalvm

./: .editorconfig  CONTRIBUTING.markdown  README.markdown  docker-compose.yml  settings.gradle.kts
.docker/: build-all.sh  ttfr.sh
.docker/init-db/: V1__InitSchema.sql  V2__SeedPlatforms.sql
.github/workflows/: java-ci.yml  java-micronaut-ci.yaml  java-micronaut-jdbc-ci.yaml  java-micronaut-r2dbc-ci.yaml  (+5 more)
.spotless/: header.txt
buildSrc/: build.gradle.kts
data/: games.csv  platforms.csv
http/: games.http  http-client.env.json  platforms.http
java-micronaut/: README.md  build.gradle.kts  gradle.lockfile
java-micronaut-jdbc/: README.md  build.gradle.kts  gradle.lockfile
java-micronaut-r2dbc/: README.md  build.gradle.kts  gradle.lockfile
java-spring-mvc/: README.markdown  build.gradle.kts  gradle.lockfile
kotlin-spring-webflux/: README.markdown  build.gradle.kts  gradle.lockfile
load_tests/: README.markdown  create_games.js  platforms_list.json  read_platforms.js
micronaut-app/: build.gradle.kts  gradle.lockfile
rust-actix-web/: .env  .gitignore  Cargo.toml  sqlx-data.json
rust-actix-web/migrations/: 20230314183702_initial.sql
rust-actix-web/src/: app.rs  configuration.rs  lib.rs  main.rs  responders.rs
rust-actix-web/src/config/: application.yaml
rust-actix-web/src/games/: database.rs  game.rs  game_request.rs  genre.rs  handlers.rs  metadata.rs  mod.rs  mode.rs  rating.rs
shared-java-library/: build.gradle.kts
spring-boot-app/: README.markdown  build.gradle.kts  gradle.lockfile
spring-mvc-app/: build.gradle.kts  gradle.lockfile
(+126 files in other folders)
