[package]
name = "rust-actix-web"
version = "0.1.0"
edition = "2021"
authors = ["CarloMicieli <piovarolo@gmail.com>"]
license = "Apache-2.0"
rust-version = "1.67"

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.69"
chrono = { version = "0.4.23", features = ["serde"] }
colored = "2.0.0"
config = "0.13.3"
derive_more = "0.99.17"
log = "0.4.17"
rust_decimal = { version = "1.28.1", features = ["serde-with-float"] }
rust_decimal_macros = "1.28.1"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_derive = "1.0.152"
serde_json = "1.0.93"
slug = "0.1.4"
thiserror = "1.0.39"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
url = { version = "2.3.1", features = ["serde"] }
urn = { version = "0.5.1", features = ["serde"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }
validator = { version = "0.16.0", features = ["derive", "phone"] }

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "chrono",
    "decimal",
    "macros",
    "migrate",
    "offline",
    "postgres",
    "runtime-tokio-rustls",
    "uuid"
]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rust-actix-web"
